--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,14 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  animation: App-logo-spin infinite 2s linear;
+  height: 600px;
+  width: 800px;
 }
 
 .App-header {
   background-color: #222;
-  height: 150px;
+
   padding: 20px;
   color: white;
 }
